--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link href="assets/css/responsive.css" rel="stylesheet">
 
         <title>Ashtam Technologies - Enabling 'IT' For 'You'</title>
-        <link rel="icon" type="image/png" href="assets/images/logo.png">
+        <link rel="icon" type="image/png" href="assets/images/Ashtam_Tech_Logo_3.png">
     </head>
 
     <body>
@@ -66,7 +66,7 @@
                     <div class="mobile-responsive-menu">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/images/logo.png" class="main-logo" alt="logo">
+                                <img src="assets/images/Ashtam_Tech_Logo_3.png" class="main-logo" alt="logo">
                             </a>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                 <div class="container-fluid">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/logo.png" class="main-logo" alt="logo">
+                            <img src="assets/images/Ashtam_Tech_Logo_3.png" class="main-logo" alt="logo">
                         </a>
 
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -1039,7 +1039,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="widget">
-                            <img src="assets/images/logo-1.png" alt="image">
+                            <img src="assets/images/Ashtam_Tech_Logo_3.png" alt="image">
                             <p>There are many variations of  Lorem Ipsum available, but the majority have suffered alteration in some, </p>
 
                             <ul>
